[package]
name = "chat_pro"
version = "0.1.0"
authors = ["osama530 <osamaqamar93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = "*"
serde = "*"
serde_derive = "*"
mongodb = "1.1.1"

#rocket-auth-login = { git = "https://github.com/vishusandy/rocket-auth-login" }

